src/unit/snapshots/grab__unit__test_zellij__filepicker_after_folder_change.snap
---
source: src/unit/test_zellij.rs
expression: frame.to_trimmed_string()
---
 Current Folder: /new/folder/path (Ctrl f to change)
 _

 No Panes or Files



















 Hint: start your search with 'struct', 'fn' or 'enum' to look for rust assets
