src/unit/snapshots/grab__unit__test_zellij__render_with_search_main.snap
---
source: src/unit/test_zellij.rs
expression: frame.to_trimmed_string()
---
 Current Folder: /home/user/project (Ctrl f to change)
 main_

 PANE  vim ~/project/src/main.rs   <Enter>
 FILE  src/main.rs


















 Hint: start your search with 'struct', 'fn' or 'enum' to look for rust assets
