src/unit/snapshots/grab__unit__test_zellij__search_results_ui.snap
---
source: src/unit/test_zellij.rs
expression: frame.to_trimmed_string()
---
 Current Folder: /home/user/project (Ctrl f to change)
 ui_

 FILE  src/ui.rs   <Enter>



















 Hint: start your search with 'struct', 'fn' or 'enum' to look for rust assets
